<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/navigation_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/title_home" />

        <item
            android:id="@+id/navigation_notifications"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/title_movement" />
        <item
            android:id="@+id/navigation_dashboard"
            android:icon="@drawable/ic_dashboard_black_24dp"
            android:title="@string/title_conveyance" />

        <item
            android:id="@+id/navigation_leave"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/title_leave" />
        <item
            android:id="@+id/navigation_account"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/title_account" />

    </group>
</menu>